core/iccprofile: calculate inverse TRC ourselves

Some (incredibly) broken profiles have the TRC and VCGT merged. The "TRC" tags
of such profiles can have curves where a 100% input value does not map to 100%
of the output value. Inverting such curves with LCMS doesn't yield the desired
result, as it maps 100% input to 100% output.
This commit fixes that by just inverting the TRC in a new function, which also
checks for the maximum output value and ignores all values above it.

BUG: 515194


(cherry picked from commit 20cccbc193049acef036b98a60afb8ca06cc7f22)

Co-authored-by: Xaver Hugl <xaver.hugl@kde.org>